Frontend: fix image overflow

--- a/src/MovieCard.css
+++ b/src/MovieCard.css
@@ -5,7 +5,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 5px;
+    border-radius: 15px;
+    overflow: hidden;
 }
 
 .movie-card:hover {
